--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,16 @@
-<p>This is the partial for view 1.</p>
+<p>This is the partial for catalogue view</p>
+<ul>
+  <li>
+    <h3><span>Product Name1</span></h3>
+    <p>
+      Product price
+    </p>
+  </li>
+  <li>
+    <h3><span>Product Name2</span></h3>
+    <p>
+      Product price
+    </p>
+  </li>
+</ul>
+<p>Catalogue</p>
