add shopping cart component

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 <body>
   <ul class="menu">
     <li><a href="#!/products">Catalogue</a></li>
-    <li><a href="#!/view2">Shopping Cart</a></li>
+    <li><a href="#!/shoppingCart">Shopping Cart</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -32,7 +32,8 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app.module.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="shopping-cart/shopping-cart.module.js"></script>
+  <script src="shopping-cart/shopping-cart.component.js"></script>
   <script src="product-list/product-list.module.js"></script>
   <script src="product-list/product-list.component.js"></script>
   <script src="product-detail/product-detail.module.js"></script>
