add products to shopping cart

--- a/app/product-detail/product-detail.template.html
+++ b/app/product-detail/product-detail.template.html
@@ -1,2 +1,2 @@
-<h1><span>{{$ctrl.productId}}</span></h1>
-<button ng-click="onClick(product.id);">Add to shopping cart</button>
+<h1><span>{{$ctrl.product.name}}</span></h1>
+<button ng-click="onClick($ctrl.product.id);">Add to shopping cart</button>
