--- a/app/shopping-cart/shopping-cart.html
+++ b/app/shopping-cart/shopping-cart.html
@@ -1,3 +1,4 @@
+<h1>Shopping Cart</h1>
 <ul>
   <li ng-repeat="product in $ctrl.products track by $index">
     <h3><span>{{product.name}}</span></h3>
