added transition to checkout page

--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,8 @@
   <script src="product-list/product-list.module.js"></script>
   <script src="product-detail/product-detail.component.js"></script>
   <script src="product-detail/product-detail.module.js"></script>
+  <script src="checkout-detail/checkout-detail.component.js"></script>
+  <script src="checkout-detail/checkout-detail.module.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
