--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
   <script src="product-detail/product-detail.module.js"></script>
   <script src="checkout-detail/checkout-detail.component.js"></script>
   <script src="checkout-detail/checkout-detail.module.js"></script>
+  <script src="order-confirmed/order-confirmed.component.js"></script>
+  <script src="order-confirmed/order-confirmed.module.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
