--- a/app/checkout-detail/checkout-detail.template.html
+++ b/app/checkout-detail/checkout-detail.template.html
@@ -1,5 +1,44 @@
-<form>
-  <label>Full Name:
-    <input type="text" ng-model="user.name" /></label><br />
-    <input type="submit" ng-click="onClick(user)" value="Confirm" />
+<form name="form" class="css-form" novalidate>
+  <label>Name:
+  <input type="text" ng-model="user.name" name="uName" required="" />
+</label>
+
+  <br />
+  <div ng-show="form.$submitted || form.uName.$touched">
+    <div ng-show="form.uName.$error.required">Tell us your name.</div>
+  </div>
+
+  <label>E-mail:
+  <input type="email" ng-model="user.email" name="uEmail" required="" />
+</label>
+
+  <br />
+  <div ng-show="form.$submitted || form.uEmail.$touched">
+    <span ng-show="form.uEmail.$error.required">Tell us your email.</span>
+    <span ng-show="form.uEmail.$error.email">This is not a valid email.</span>
+  </div>
+
+  <br /> Gender:
+  <label><input type="radio" ng-model="user.gender" value="male" />male</label>
+  <label><input type="radio" ng-model="user.gender" value="female" />female</label>
+  <br />
+
+  <div>
+    <p>
+      <label>Date of birth: </label>
+      <input type="date" id="date" ng-model="user.birthday" />
+    </p>
+
+  </div>
+
+  <div>
+    <p>
+      <label>Delivery date: </label>
+      <input type="date" id="date" ng-model="deliveryDate" />
+    </p>
+
+  </div>
+
+
+  <input type="submit" ng-click="onClick(user, deliveryDate)" value="Confirm" />
 </form>
