Added some style.

--- a/app/checkout-detail/checkout-detail.template.html
+++ b/app/checkout-detail/checkout-detail.template.html
@@ -36,5 +36,5 @@
   </div>
 
 
-  <input type="submit" ng-click="onClick(user, deliveryDate)" value="Confirm" ng-disabled="form.$invalid" />
+  <input type="submit" ng-click="onClick(user, deliveryDate)" value="Confirm" ng-disabled="form.$invalid" class="btn btn-primary" />
 </form>
