--- a/app/product-detail/product-detail.template.html
+++ b/app/product-detail/product-detail.template.html
@@ -1,2 +1,7 @@
-<h1><span>{{$ctrl.product.name}}</span></h1>
-<button ng-click="onClick($ctrl.product.id);">Add to shopping cart</button>
+<div class="container">
+  <div class="row">
+    <img src="http://placehold.it/350x150" />
+    <h1><span>{{$ctrl.product.name}}</span></h1>
+    <button ng-click="onClick($ctrl.product.id); " class="btn btn-primary">Add to shopping cart</button>
+  </div>
+</div>
