--- a/app/shopping-cart/shopping-cart.html
+++ b/app/shopping-cart/shopping-cart.html
@@ -5,4 +5,4 @@
     <p>{{product.price}}</p>
   </li>
 </ul>
-<button ng-click="onClick();">Checkout</button>
+<button ng-click="onClick();" class="btn btn-primary">Checkout</button>
